Fixed alignment of page content

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,15 +1,17 @@
 .page {
-  margin: 0;
+  width: 100%;
+  min-height: 822px;
+  margin: 0 auto;
   padding: 0;
   background-color: #f3f3f3;
-  font-family: "Cabinet Grotesk", sans-serif;
-  width: 100%;
-  /*display: flex;
-  flex-direction: column; */
+  /* font-family: "Cabinet Grotesk", sans-serif;
+  width: 100%; */
+  display: flex;
+  flex-direction: column;
 }
 
 .page__content {
-  max-width: 1440px;
+  max-width: 1441px;
   margin: 0 auto;
   padding: 0 20px;
   min-height: 100vh;
@@ -17,7 +19,7 @@
   flex-direction: column;
 }
 
-/* @media (max-width: 820px) {
+@media (max-width: 820px) {
   .page {
     width: 80%;
     max-width: 820px;
@@ -27,4 +29,4 @@
   .page__content {
     width: 80%;
   }
-} */
+}
