--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,17 +2,16 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
-  padding: 32px 0 11px 40px;
-  /* gap: 10px; */
+  padding: 32px 0 11px 0px;
   max-width: 1360px;
-  max-height: 40px;
+  /* max-height: 40px; */
 }
 .header__controls {
   display: flex;
   align-items: center;
   margin-left: 0;
   gap: 20px;
-  padding-left: 650px;
+  margin-left: auto;
 }
 .header__logo {
   margin-right: 24px;
